--- a/HR.ATS.WebAPI/appsettings.json
+++ b/HR.ATS.WebAPI/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Application": "ATS",
+  "AuthorityEndpoint": "https://{tenant}.rac.dev.totvs.app/totvs.rac",
+  "ClientId": "ats_oidc",
+  "ClientSecret": "totvs@123",
   "Logging": {
       "LogLevel": {
       "Default": "Information",
