--- a/HR.ATS.WebAPI/HR.ATS.WebAPI.csproj
+++ b/HR.ATS.WebAPI/HR.ATS.WebAPI.csproj
@@ -19,8 +19,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.14" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
+        <PackageReference Include="MediatR" Version="9.0.0"/>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.14"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -31,8 +33,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\HR.ATS.Command\HR.ATS.Command.csproj"/>
       <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
+        <ProjectReference Include="..\HR.ATS.Domain\HR.ATS.Domain.csproj"/>
       <ProjectReference Include="..\HR.ATS.Infrastructure\HR.ATS.Infrastructure.csproj" />
+        <ProjectReference Include="..\HR.ATS.Query\HR.ATS.Query.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
