--- a/HR.ATS.Command/HR.ATS.Command.csproj
+++ b/HR.ATS.Command/HR.ATS.Command.csproj
@@ -2,16 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="9.0.0"/>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj"/>
-        <ProjectReference Include="..\HR.ATS.Domain\HR.ATS.Domain.csproj"/>
+        <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
+        <ProjectReference Include="..\HR.ATS.Domain\HR.ATS.Domain.csproj" />
     </ItemGroup>
 
 </Project>
