--- a/HR.ATS.Domain/HR.ATS.Domain.csproj
+++ b/HR.ATS.Domain/HR.ATS.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
+    </ItemGroup>
+
 </Project>
