--- a/HR.ATS.Query/HR.ATS.Query.csproj
+++ b/HR.ATS.Query/HR.ATS.Query.csproj
@@ -2,15 +2,17 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MediatR" Version="9.0.0"/>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\HR.ATS.Infrastructure\HR.ATS.Infrastructure.csproj"/>
+        <ProjectReference Include="..\HR.ATS.Infrastructure\HR.ATS.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
