--- a/HR.ATS.Domain/HR.ATS.Domain.csproj
+++ b/HR.ATS.Domain/HR.ATS.Domain.csproj
@@ -3,6 +3,11 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
+    </ItemGroup>
 
 </Project>
