--- a/HR.ATS.WebAPI/HR.ATS.WebAPI.csproj
+++ b/HR.ATS.WebAPI/HR.ATS.WebAPI.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
         <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
         <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
         <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
@@ -19,6 +20,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.14" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
     </ItemGroup>
@@ -31,8 +34,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\HR.ATS.Command\HR.ATS.Command.csproj" />
       <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
+        <ProjectReference Include="..\HR.ATS.Domain\HR.ATS.Domain.csproj" />
       <ProjectReference Include="..\HR.ATS.Infrastructure\HR.ATS.Infrastructure.csproj" />
+        <ProjectReference Include="..\HR.ATS.Query\HR.ATS.Query.csproj" />
     </ItemGroup>
 
     <ItemGroup>
