Adicionado po-ui

--- a/HR.ATS.WebAPI/ClientApp/angular.json
+++ b/HR.ATS.WebAPI/ClientApp/angular.json
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@totvs/po-theme/css/po-theme-default-variables.min.css",
+              "node_modules/@po-ui/style/css/po-theme-core.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -65,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ats:build"
+            "browserTarget": "ats:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
@@ -91,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@po-ui/style/css/po-theme-default.min.css",
               "src/styles.css"
             ],
             "scripts": []
