--- a/HR.ATS.WebAPI/ClientApp/package.json
+++ b/HR.ATS.WebAPI/ClientApp/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~11.2.0",
     "@po-ui/ng-components": "^4.15.0",
     "@totvs/po-theme": "*",
+    "immer": "*",
+    "jwt-decode": "*",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -30,6 +32,7 @@
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jwt-decode": "*",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
