--- a/HR.ATS.Domain/HR.ATS.Domain.csproj
+++ b/HR.ATS.Domain/HR.ATS.Domain.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\HR.ATS.CrossCutting\HR.ATS.CrossCutting.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
