Criado tela de currículo para recrutador (#7)
Co-authored-by: Pedro Ballona <pedro.ballona@totvs.com.br>

--- a/HR.ATS.WebAPI/ClientApp/package.json
+++ b/HR.ATS.WebAPI/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.0",
     "@po-ui/ng-components": "^4.15.0",
     "@totvs/po-theme": "*",
+    "angular-oauth2-oidc": "*",
     "immer": "*",
     "jwt-decode": "*",
     "luxon": "*",
